<?xml version="1.0"?>
<package format="2">
  <name>spdlog</name>
  <version>1.3.1</version>
  <description>Very fast, header-only/compiled, C++ logging library.</description>

  <license>MIT</license>
  <maintainer email="johannes.beck@kit.edu">Johannes Beck</maintainer>
  <author>Gabi Melman</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/MRT/thirdparty/spdlog.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <depend>fmt</depend>
</package>
